Added POST endpoint to insert new bike information for a user
